# cloud

./: README.md
app/: .prettierignore  .prettierrc  CHANGELOG.md  README.md  package.json  vite.config.ts
app/src/: index.tsx  main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
