[package]
name = "cloud"
version = "0.1.2"
description = "Local cloud on your devices"
authors = ["im"]
edition = "2021"

[lib]
name = "cloud_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
